--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ body {
 }
 
 .container {
+  width: 100%;
+  height: 100%;
   max-width: 27.5rem; /* 440px */
   max-height: 59.75rem; /* 956px */
   margin: 0 auto;
