--- a/style.css
+++ b/style.css
@@ -101,11 +101,10 @@ body {
 }
 
 .drink-selection {
-  flex: 1;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
   gap: 0.75rem;
+  margin-top: 1.5rem;
 }
 
 .drink-card {
