--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
 }
 
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: 'Unbounded', sans-serif;
@@ -41,13 +42,14 @@ body {
 }
 
 .container {
+  height: 100%;
+  max-height: 59.75rem;
+  max-width: 27.5rem;
+  margin: 0 auto;
+  padding: 3rem;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  max-width: 27.5rem; /* 440px */
-  max-height: 59.75rem; /* 956px */
-  margin: 0 auto;
-  padding: 3rem; /* 48px */
-  box-sizing: border-box;
 }
 
 .header {
@@ -101,6 +103,7 @@ body {
 }
 
 .drink-selection {
+  flex-grow: 1;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 0.75rem;
