--- a/style.css
+++ b/style.css
@@ -32,8 +32,16 @@
   }
 }
 
-body {
+html, body {
   height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
   margin: 0;
   padding: 0;
   font-family: 'Unbounded', sans-serif;
@@ -42,14 +50,13 @@ body {
 }
 
 .container {
-  height: 100%;
-  max-height: 59.75rem;
-  max-width: 27.5rem;
-  margin: 0 auto;
-  padding: 3rem;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  height: 100vh; /* ГАРАНТИЯ! */
+  width: 100%;
+  max-width: 27.5rem;
+  padding: 3rem;
+  box-sizing: border-box;
 }
 
 .header {
