--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* ГАРАНТИЯ! */
-  width: 100%;
+  height: 100dvh;
   max-width: 27.5rem;
+  width: 100%;
   padding: 3rem;
   box-sizing: border-box;
 }
