--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ body {
 }
 
 .container {
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
   display: flex;
   flex-direction: column;
   height: 100dvh;
