--- a/style.css
+++ b/style.css
@@ -62,6 +62,13 @@ body {
   box-sizing: border-box;
 }
 
+@media (display-mode: standalone) {
+  .container {
+    padding-top: calc(env(safe-area-inset-top) + 3rem);
+    padding-bottom: calc(env(safe-area-inset-bottom) + 3rem);
+  }
+}
+
 .header {
   display: flex;
   justify-content: space-between;
