--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
   height: 100dvh;
   max-width: 27.5rem;
   width: 100%;
-  padding: 3rem;
+  padding: 3rem 2rem;
   box-sizing: border-box;
 }
 
