--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   gap: 0.75rem;
   margin-top: 1.5rem;
+  margin-bottom: 2rem
 }
 
 .drink-card {
@@ -150,7 +151,6 @@ body {
   display: flex;
   justify-content: space-between;
   background-color: var(--bg-secondary);
-  margin-top: 1.5rem;
   border-radius: 0.75rem;
   overflow: hidden;
 }
