--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   gap: 0.75rem;
   margin-top: 1.5rem;
-  margin-bottom: 2rem
+  margin-bottom: 2rem;
 }
 
 .drink-card {
@@ -176,5 +176,5 @@ body {
   width: 100%;
   height: 0.0625rem;
   background-color: var(--border-default);
-  margin-top: 2rem;
+  margin: 2rem 0;
 }
