--- a/style.css
+++ b/style.css
@@ -176,5 +176,6 @@ body {
   width: 100%;
   height: 0.0625rem;
   background-color: var(--border-default);
-  margin: 2rem 0;
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
 }
