--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* ==========================================================================
+   TOKENS / COLOR VARIABLES
+========================================================================== */
 :root {
   --text-primary: #1A1F36;
   --text-secondary: #697386;
@@ -21,9 +24,9 @@
     --text-brand: #7CABF8;
     --text-invert: #2A2F45;
 
-    --bg-primary: #2A2F45; 
-    --bg-secondary: #3C4257;
-    --bg-secondary-active: #4F566B;
+    --bg-primary: #1A1F36; 
+    --bg-secondary: #2A2F45;
+    --bg-secondary-active: #C0C9D2;
     --bg-brand: #7CABF8;
 
     --border-default: #4F566B;
