--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --text-primary: #F1F5F9;
-    --text-secondary: #8792A1;
+    --text-secondary: #A3ACB9;
     --text-brand: #7CABF8;
     --text-invert: #2A2F45;
 
