--- a/style.css
+++ b/style.css
@@ -85,6 +85,12 @@ body {
   margin: 0;
 }
 
+.number {
+  font-size: 4.5rem; /* 72px */
+  line-height: 4.5rem;
+  font-weight: 800;
+}
+
 /* ==========================================================================
    LAYOUT COMPONENTS: HEADER
 ========================================================================== */
@@ -118,13 +124,7 @@ body {
   margin-top: 0.75rem; /* 12px */
 }
 
-.number {
-  font-size: 4.5rem; /* 72px */
-  line-height: 4.5rem;
-  font-weight: 800;
-}
-
-.result-label {
+.label {
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 600;
