--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
     --bg-primary: #1A1F36; 
     --bg-secondary: #2A2F45;
-    --bg-secondary-active: #C0C9D2;
+    --bg-secondary-active: #3C4257;
     --bg-brand: #7CABF8;
 
     --border-default: #4F566B;
