--- a/component/carousel/carousel.css
+++ b/component/carousel/carousel.css
@@ -55,7 +55,7 @@
   color: var(--text-secondary);
   border-radius: 0.75rem;
   user-select: none;
-  cursor: pointer;
+  cursor: ew-resize;
   scroll-snap-align: center;
 }
 
