--- a/style.css
+++ b/style.css
@@ -250,3 +250,7 @@ body {
 .settings-page .segmented-control {
   margin-bottom: 1.5rem;
 }
+
+.settings-page .carousel-wrapper {
+   margin-bottom: 1.5rem;
+}
