--- a/component/carousel/carousel.css
+++ b/component/carousel/carousel.css
@@ -64,7 +64,7 @@
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 600;
-  color: var(--text-secondary);
+  color: var(--text-disabled);
   border-radius: 0.75rem;
   user-select: none;
   cursor: pointer;
