--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   --bg-secondary: #F4F7FA;
   --bg-secondary-active: #E3E8ED;
   --bg-brand: #3D4EAC;
+  --bg-backdrop: #1A1F36;
 
   --border-default: #E3E8ED;
   --border-brand: #3D4EAC;
@@ -30,6 +31,7 @@
     --bg-secondary: #2A2F45;
     --bg-secondary-active: #3C4257;
     --bg-brand: #7CABF8;
+    --bg-backdrop: #1A1F36;
 
     --border-default: #4F566B;
     --border-brand: #7CABF8;
@@ -264,7 +266,7 @@ body {
 .backdrop {
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color:  var(--bg-backdrop);
   z-index: 10;
   opacity: 0;
   transition: opacity 0.3s ease;
@@ -272,7 +274,7 @@ body {
 }
 
 .backdrop.visible {
-  opacity: 1;
+  opacity: 0.8;
   pointer-events: auto;
 }
 
