--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   --bg-secondary: #F4F7FA;
   --bg-secondary-active: #E3E8ED;
   --bg-brand: #3D4EAC;
-  --bg-backdrop: #1A1F36;
+  --bg-backdrop: #171B30;
 
   --border-default: #E3E8ED;
   --border-brand: #3D4EAC;
