--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     --bg-backdrop: #1A1F36;
 
     --border-default: #4F566B;
-    --border-brand: #7CABF8;
+    --border-brand: #171B30;
     --border-transparent: transparent;
   }
 }
