--- a/component/carousel/carousel.css
+++ b/component/carousel/carousel.css
@@ -12,7 +12,9 @@
 }
 
 .carousel {
+  position: relative;
   display: flex;
+  flex-direction: column;
   overflow-x: auto;
   background-color: var(--bg-secondary);
   scrollbar-width: none;
@@ -20,7 +22,6 @@
   border-radius: 0.75rem;
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
-  position: relative;
   z-index: 1;
   cursor: ew-resize;
 }
@@ -43,18 +44,18 @@
 }
 
 .carousel-indicator {
-  position: absolute;
+  position: sticky;
   top: 0;
-  bottom: 0;
+  align-self: center;
   width: 4rem;
   height: 3rem;
-  left: 50%;
-  transform: translateX(-50%);
   border: 0.125rem solid var(--border-brand);
   border-radius: 0.75rem;
   pointer-events: none;
   z-index: 2;
   box-sizing: border-box;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .carousel-item {
