--- a/component/carousel/carousel.css
+++ b/component/carousel/carousel.css
@@ -27,6 +27,10 @@
   -webkit-overflow-scrolling: touch;
 }
 
+.carousel-inner::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+
 .carousel-content {
   display: flex;
   flex-direction: row;
