--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ body {
   border-top-left-radius: 2rem;
   border-top-right-radius: 2rem;
   max-height: 80vh;
+  max-width: 27.5rem;
   overflow-y: auto;
   transform: translateY(100%);
   opacity: 0;
