--- a/style.css
+++ b/style.css
@@ -296,6 +296,7 @@ body {
   transition: transform 0.3s ease, opacity 0.3s ease;
   z-index: 11;
   padding: 2rem 2rem 1.5rem 2rem; /* top right bottom left */
+  box-sizing: border-box;
 }
 
 .bottom-sheet.visible {
